--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -1,25 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block contents %}
-<style>
-body{
-  background-image: url("../static/index.jpg");
-  background-repeat: no-repeat;
-  background-size : cover;
-  background-position: center center;
-  background-attachment: fixed;  
-}
-.title{
-  font-family: 'Cookie', cursive;
-  text-align:center;
-  font-size : 220px;
-  color :rgb(71, 5, 66);
-}
-</style>
 
-<body>
+
 
 
 <p class="title">Any Travel</p>
 
 {% endblock %}
+
+</body>
+</html>
