--- a/static/myapp/style.css
+++ b/static/myapp/style.css
@@ -1,5 +1,5 @@
-.body{
-  background-image: url("../static/index.jpg");
+body{
+  background-image: url("../index.jpg");
   background-repeat: no-repeat;
   background-size : cover;
   background-position: center center;
@@ -13,6 +13,5 @@
 }
 
 .hi{
-
   font-size:500px;
 }
