--- a/djangoproject/templates/base.html
+++ b/djangoproject/templates/base.html
@@ -7,7 +7,8 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>   
-    <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">      
+    <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">
     <meta charset="utf-8">
         <title>Any Travel</title>
     {% block baseheader %}
@@ -24,21 +25,30 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">일본</a>
+          </li>
+            <li style="text-align:right" class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                일본
+            </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="{% url 'login:login' %}">소개
+                  <a class="dropdown-item" href="{% url 'login:login' %}">후기
+                  <a class="dropdown-item" href="{% url 'login:login' %}">날씨
+                  <a class="dropdown-item" href="{% url 'login:login' %}">항공</a>
+                </a>
+                </div>
+              
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'myapp:read' %}">게시판</a>
             </li>
-            
-
             <li style="text-align:right" class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 로그인
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="{% url 'login:login' %}">회원가입</a>
-                <a class="dropdown-item" href="{% url 'login:logout' %}">로그아웃</a>
+                <a class="dropdown-item" href="{% url 'login:login' %}">로그인</a>
+                <a class="dropdown-item" href="{% url 'login:signup' %}">회원가입</a>
               </div>
             </li>
           </ul>
