--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -1,11 +1,33 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block baseheader %}
+<style>
+.good{
+    font-family: 'Gugi', cursive;
+    font-size:50px
+
+}
+</style>
+{% endblock %}
 {% block contents %}
 
-
-
-
 <p class="title">Any Travel</p>
+
+<div style="text-align:center">
+<ul class="nav navbar-nav navbar-right">
+    {% if user.is_active %}
+    <p class = "good">
+     {{user.username}} 님 환영합니다</p>
+
+     <a href="{% url 'login:logout' %}">
+        <input class="btn btn-primary btn-lg" type="submit" value="로그아웃"></a>
+
+    <a href="{% url 'login:change_pw' %}">
+        <input class="btn btn-success btn-lg" type="submit" value="정보 변경"></a>
+
+     {% endif %}<br><br>
+
+    </p></div>
 
 {% endblock %}
 
